Styling tweaks for codeplay * make sure health is visible at all resolutions * shrink and center canvas as needed to fit product banner

--- a/app/styles/play/play-level-view.sass
+++ b/app/styles/play/play-level-view.sass
@@ -332,7 +332,11 @@ $level-resize-transition-time: 0.5s
     
   #codeplay-product-banner
     width: calc(58.5% - 250px)
+    max-width: 100vh
     position: relative
+    left: 20px
+    top: -7px
+    z-index: 5
 
 html.fullscreen-editor
   #level-view
